IO layers - ensure unencoded read/write